# pyproject

./: .bumpversion.cfg  .gitignore  README  README.md  README.rst  cookiecutter.json
basic/: .gitignore  .hgignore  Makefile  README  run.ini
basic/project/: database.py  requirements.txt  settings.py
basic/spider/: PROJECT_NAME.py
hooks/: post_gen_project.py
{{ cookiecutter.project_name }}/: .bumpversion.cfg  .flake8  .gitignore  .hgignore  LICENSE  Makefile  Pipfile  README  README.md  pylintrc  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
{{ cookiecutter.project_name }}/.github/workflows/: check.yml  code_quality.yml  mypy.yml  test.yml
{{ cookiecutter.project_name }}/project/: config.py  database.py  settings.py
{{ cookiecutter.project_name }}/spider/: {{ cookiecutter.project_name }}  {{ cookiecutter.project_name }}.py
{{ cookiecutter.project_name }}/tests/: test_basic.py
